force-app/main/default/objects/Box_Setting__mdt/Box_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Box Setting</label>
    <pluralLabel>Box Settings</pluralLabel>
</CustomObject>