force-app/main/default/objects/Box_Setting__mdt/fields/File_Split_By__c.field-meta.xml
<CustomField>
    <fullName>File_Split_By__c</fullName>
    <label>File Split By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;,&quot;</fullName>
                <default>true</default>
                <label>&quot;,&quot;</label>
            </value>
            <value>
                <fullName>&quot;|&quot;</fullName>
            </value>
            <value>
                <fullName>&quot; | &quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>