force-app/main/default/objects/Box_Setting__mdt/fields/Servicer__c.field-meta.xml
<CustomField>
    <fullName>Servicer__c</fullName>
    <label>Servicer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cohen</fullName>
                <default>true</default>
                <label>Cohen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>