force-app/main/default/objects/Box_Setting__mdt/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>user</fullName>
                <default>true</default>
                <label>user</label>
            </value>
            <value>
                <fullName>enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>